# trip-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260629_efe642d70058_m3_multi_tenant_tables.py  20260701_3e5c37df9e3c_m6b_user_preferences.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  checkpointer.py  cli.py  context.py  graph.py  identity.py  memory.py  reliability.py  state.py  triage.py
backend/app/agent/tools/: __init__.py  _mock.py  booking.py  expense.py  flights.py  hotels.py  policy.py  trains.py  weather.py
backend/app/api/: __init__.py  auth.py  chat.py  conversations.py
backend/app/core/: __init__.py  config.py  deps.py  dynamic_config.py  logging.py  observability.py  security.py  security_headers.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/infra/: __init__.py  locks.py  qdrant.py  ratelimit.py  redis_client.py  refresh_store.py
backend/app/llm/: __init__.py  deepseek.py  embeddings.py
backend/app/rag/: __init__.py  chunk.py  ingest.py  retriever.py
backend/app/rag/data/: acme_policy.md  globex_policy.md
backend/app/security/: __init__.py  audit.py  authz.py  guards.py
backend/eval/: __init__.py  judge.py  metrics.py  replay.py  report.py  run_eval.py  schema.py
backend/eval/cassettes/: trip_eval.json
backend/eval/datasets/: trip_eval.jsonl
backend/scripts/: lock_demo.py  seed.py
backend/tests/: test_agent_m1.py  test_agent_m2.py  test_agent_m2_clarify.py  test_eval_offline.py  test_m3_isolation.py  test_m3_security.py  test_m4_locks.py  test_m4_ratelimit.py  test_m4_reliability.py  test_m5_rag.py  test_m6_context.py  test_m6b_memory.py  test_m7_authz_hitl.py  test_m7b_guards.py  test_m9_dynamic_config.py  test_m9a_chat_sse.py  test_m9b_refresh.py  test_m9d_observability.py  test_smoke.py
frontend/: .dockerignore  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  auth.js  markdown.js  style.css
frontend/src/components/: ChatView.vue  LoginView.vue
